--- a/.github/workflows/linux-coveralls.yml
+++ b/.github/workflows/linux-coveralls.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     env:
-      workdir: aggregator-module
+      workdir: parent-module
 
     name: Build with Java 8 and Coveralls on Linux
     steps:
