--- a/.github/workflows/linux-coveralls.yml
+++ b/.github/workflows/linux-coveralls.yml
@@ -8,7 +8,10 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     env:
-      workdir: aggregator-module
+      workdir: aggregator
+      COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     name: Build with Java 11, Coveralls, and PIT on Linux
     steps:
@@ -25,19 +28,14 @@ jobs:
       with:
         path: |
           ~/.m2
-          ~/.sonar/cache
+          !/.m2/repository/it/jasonravagli/gym/**
         key: ${{ runner.os }}-m2-jdk11-${{ hashFiles('**/pom.xml', '**/linux-coveralls.yml') }}
         restore-keys: ${{ runner.os }}-m2-jdk11-
     - name: Build with Maven
       run: >
-        mvn verify -Pcoveralls,pit sonar:sonar
+        mvn install -Pcoveralls,pit
         -DrepoToken=$COVERALLS_TOKEN -DpullRequest=${{ github.event.pull_request.number }}
-        -Dsonar.organization=jasonravagli-github -Dsonar.host.url=https://sonarcloud.io
       working-directory: ${{ env.workdir }}
-      env: 
-        COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     - name: Generate JUnit Report
       run: mvn surefire-report:report-only site:site -DgenerateReports=false
       working-directory: ${{ env.workdir }}
