--- a/aggregator/pom.xml
+++ b/aggregator/pom.xml
@@ -13,27 +13,43 @@
 		<module>../parent</module>
 		<module>../domain-model</module>
 		<module>../logic</module>
+		<module>../mongodb</module>
+		<module>../gui</module>
 	</modules>
 
 	<properties>
 		<!-- SONARQUBE CONFIGURATION -->
-		<sonar.projectKey>default-project</sonar.projectKey>
-		<!-- Exclude the domain model from code coverage -->
+		<!-- Exclude the domain model and the other classes without logic from 
+			code coverage -->
 		<sonar.coverage.exclusions>
-			**/domain-model/**
+			**/domain-model/**,
+			**/mongodb/**/MongoRepositoryProvider.java,
+			**/logic/**/TransactionException.java,
+			**/gui/**/SimpleDocumentListener.java
 		</sonar.coverage.exclusions>
-		<!-- Rule exclusions -->
-		<!-- Ignore Subclasses that add fields should override "equals" for domain 
-			model classes -->
-		<sonar.issue.ignore.multicriteria>e11</sonar.issue.ignore.multicriteria>
+		<sonar.issue.ignore.multicriteria>e11,e12</sonar.issue.ignore.multicriteria>
+		
+		<!-- Disable rule "Tests should include assertions" for GUI Tests (AssertJ 
+			Swing tests does not necessarily perform explicit assertions) -->
 		<sonar.issue.ignore.multicriteria.e11.ruleKey>
-			java:S2160
+			java:S2699
 		</sonar.issue.ignore.multicriteria.e11.ruleKey>
 		<sonar.issue.ignore.multicriteria.e11.resourceKey>
-			**/domain-model/**/*.java
+			**/gui/**/SwingGymViewTest.java,
+			**/gui/**/SwingDialogManageMemberTest.java
 		</sonar.issue.ignore.multicriteria.e11.resourceKey>
-	</properties>
 
+		<!-- Disable rule "Local variable and method parameter names should comply 
+			with a naming convention" for GUI code since WindowBuilder automatically 
+			assign names to variables -->
+		<sonar.issue.ignore.multicriteria.e12.ruleKey>
+			java:S117
+		</sonar.issue.ignore.multicriteria.e12.ruleKey>
+		<sonar.issue.ignore.multicriteria.e12.resourceKey>
+			**/gui/**/SwingGymView.java,
+			**/gui/**/SwingDialogManageMember.java
+		</sonar.issue.ignore.multicriteria.e12.resourceKey>
+	</properties>
 
 	<build>
 		<pluginManagement>
