--- a/aggregator/pom.xml
+++ b/aggregator/pom.xml
@@ -14,6 +14,7 @@
 		<module>../domain-model</module>
 		<module>../logic</module>
 		<module>../mongodb</module>
+		<module>../gui</module>
 	</modules>
 
 	<properties>
