--- a/aggregator/pom.xml
+++ b/aggregator/pom.xml
@@ -27,16 +27,15 @@
 			**/logic/**/TransactionException.java,
 			**/gui/**/SimpleDocumentListener.java
 		</sonar.coverage.exclusions>
-		<sonar.issue.ignore.multicriteria>e11,e12</sonar.issue.ignore.multicriteria>
-		
+		<sonar.issue.ignore.multicriteria>e11,e12,e13</sonar.issue.ignore.multicriteria>
+
 		<!-- Disable rule "Tests should include assertions" for GUI Tests (AssertJ 
 			Swing tests does not necessarily perform explicit assertions) -->
 		<sonar.issue.ignore.multicriteria.e11.ruleKey>
 			java:S2699
 		</sonar.issue.ignore.multicriteria.e11.ruleKey>
 		<sonar.issue.ignore.multicriteria.e11.resourceKey>
-			**/gui/**/SwingGymViewTest.java,
-			**/gui/**/SwingDialogManageMemberTest.java
+			**/gui/**/*Test.java
 		</sonar.issue.ignore.multicriteria.e11.resourceKey>
 
 		<!-- Disable rule "Local variable and method parameter names should comply 
@@ -46,9 +45,18 @@
 			java:S117
 		</sonar.issue.ignore.multicriteria.e12.ruleKey>
 		<sonar.issue.ignore.multicriteria.e12.resourceKey>
-			**/gui/**/SwingGymView.java,
-			**/gui/**/SwingDialogManageMember.java
+			**/gui/**/Swing*.java
 		</sonar.issue.ignore.multicriteria.e12.resourceKey>
+
+		<!-- Disable rule "Source files should not have any duplicated blocks" 
+			for Swing dialogs classes. Their layout is similar but abstracting the GUI 
+			layout does not bring any improvements -->
+		<sonar.issue.ignore.multicriteria.e13.ruleKey>
+			common-java:DuplicatedBlocks
+		</sonar.issue.ignore.multicriteria.e13.ruleKey>
+		<sonar.issue.ignore.multicriteria.e13.resourceKey>
+			**/SwingDialog*.java
+		</sonar.issue.ignore.multicriteria.e13.resourceKey>
 	</properties>
 
 	<build>
