--- a/.github/workflows/linux-coveralls.yml
+++ b/.github/workflows/linux-coveralls.yml
@@ -23,6 +23,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
+    -name: Install TightVNC
+      run: sudo apt-get install tightvncserver
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
@@ -31,9 +33,9 @@ jobs:
           !/.m2/repository/it/jasonravagli/gym/**
         key: ${{ runner.os }}-m2-jdk11-${{ hashFiles('**/pom.xml', '**/linux-coveralls.yml') }}
         restore-keys: ${{ runner.os }}-m2-jdk11-
-    - name: Build with Maven
+    - name: Build with Maven on TightVNC
       run: >
-        xvfb-run mvn install -Pcoveralls,pit
+        execute-on-vnc.sh mvn install -Pcoveralls,pit
         -DrepoToken=$COVERALLS_TOKEN -DpullRequest=${{ github.event.pull_request.number }}
       working-directory: ${{ env.workdir }}
     - name: Generate JUnit Report
