--- a/.github/workflows/linux-coveralls.yml
+++ b/.github/workflows/linux-coveralls.yml
@@ -1,6 +1,7 @@
 name: CI with Maven, Coveralls, and PIT on Linux
 
 on:
+  push:
   pull_request:
 
 jobs:
@@ -22,8 +23,6 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11
-    - name: Install TightVNC
-      run: sudo apt-get install tightvncserver
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
@@ -32,9 +31,9 @@ jobs:
           !/.m2/repository/it/jasonravagli/gym/**
         key: ${{ runner.os }}-m2-jdk11-${{ hashFiles('**/pom.xml', '**/linux-coveralls.yml') }}
         restore-keys: ${{ runner.os }}-m2-jdk11-
-    - name: Build with Maven on TightVNC
+    - name: Build with Maven
       run: >
-        bash execute-on-vnc.sh mvn install -Pcoveralls,pit
+        xvfb-run mvn install -Pcoveralls,pit
         -DrepoToken=$COVERALLS_TOKEN -DpullRequest=${{ github.event.pull_request.number }}
       working-directory: ${{ env.workdir }}
     - name: Generate JUnit Report
