experiment with retry

--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -28,8 +28,8 @@
 			<artifactId>LGoodDatePicker</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.awaitility</groupId>
-			<artifactId>awaitility</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 	</dependencies>
 
