--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -20,6 +20,7 @@
 		<miglayout.version>5.3</miglayout.version>
 		<lgooddatepicker.version>11.2.1</lgooddatepicker.version>
 		<awaitility.version>4.0.2</awaitility.version>
+		<apache-commons-lang.commons>3.12.0</apache-commons-lang.commons>
 
 		<docker.image.mongo>mongo:5.0.3</docker.image.mongo>
 	</properties>
@@ -85,9 +86,9 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
-				<groupId>org.awaitility</groupId>
-				<artifactId>awaitility</artifactId>
-				<version>${awaitility.version}</version>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${apache-commons-lang.commons}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
