--- a/.github/workflows/other-platforms.yml
+++ b/.github/workflows/other-platforms.yml
@@ -59,3 +59,4 @@ jobs:
         name: surefire-reports-${{ runner.os }}-jdk${{ matrix.java }}
         path: |
           **/target/site
+          **/failed-gui-tests
