--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,8 +19,8 @@
 		<mongo.version>3.12.10</mongo.version>
 		<miglayout.version>5.3</miglayout.version>
 		<lgooddatepicker.version>11.2.1</lgooddatepicker.version>
-		<awaitility.version>4.0.2</awaitility.version>
 		<apache-commons-lang.commons>3.12.0</apache-commons-lang.commons>
+		<log4j.version>1.2.17</log4j.version>
 
 		<docker.image.mongo>mongo:5.0.3</docker.image.mongo>
 	</properties>
@@ -89,6 +89,12 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>${apache-commons-lang.commons}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+				<version>${log4j.version}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
