--- a/aggregator/pom.xml
+++ b/aggregator/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it.jasonravagli.gym</groupId>
 	<artifactId>aggregator</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>pom</packaging>
 
 	<name>gym-manager</name>
@@ -15,6 +15,9 @@
 		<module>../logic</module>
 		<module>../mongodb</module>
 		<module>../gui</module>
+		<module>../app-mongo</module>
+		<module>../mysql</module>
+		<module>../app-mysql</module>
 	</modules>
 
 	<properties>
@@ -25,9 +28,12 @@
 			**/domain-model/**,
 			**/mongodb/**/MongoRepositoryProvider.java,
 			**/logic/**/TransactionException.java,
-			**/gui/**/SimpleDocumentListener.java
+			**/gui/**/SimpleDocumentListener.java,
+			**/app-mongo/**/MongoGymApp.java,
+			**/mysql/**/MySqlRepositoryProvider.java,
+			**/app-mysql/**/MySqlGymApp.java
 		</sonar.coverage.exclusions>
-		<sonar.issue.ignore.multicriteria>e11,e12,e13</sonar.issue.ignore.multicriteria>
+		<sonar.issue.ignore.multicriteria>e11,e12,e13,e14,e15,e16</sonar.issue.ignore.multicriteria>
 
 		<!-- Disable rule "Tests should include assertions" for GUI Tests (AssertJ 
 			Swing tests does not necessarily perform explicit assertions) -->
@@ -35,7 +41,7 @@
 			java:S2699
 		</sonar.issue.ignore.multicriteria.e11.ruleKey>
 		<sonar.issue.ignore.multicriteria.e11.resourceKey>
-			**/gui/**/*Test.java
+			**/gui/**/*.java
 		</sonar.issue.ignore.multicriteria.e11.resourceKey>
 
 		<!-- Disable rule "Local variable and method parameter names should comply 
@@ -48,15 +54,44 @@
 			**/gui/**/Swing*.java
 		</sonar.issue.ignore.multicriteria.e12.resourceKey>
 
-		<!-- Disable rule "Source files should not have any duplicated blocks" 
-			for Swing dialogs classes. Their layout is similar but abstracting the GUI 
-			layout does not bring any improvements -->
+		<!-- Disable rule "Test classes should comply with a naming convention" 
+			for end to end tests classes (The suffix E2E does not comply the Java convention) -->
 		<sonar.issue.ignore.multicriteria.e13.ruleKey>
-			common-java:DuplicatedBlocks
+			java:S3577
 		</sonar.issue.ignore.multicriteria.e13.ruleKey>
 		<sonar.issue.ignore.multicriteria.e13.resourceKey>
-			**/SwingDialog*.java
+			**/*E2E.java
 		</sonar.issue.ignore.multicriteria.e13.resourceKey>
+
+		<!-- Disable rule "Generic exceptions should never be thrown" for Repository 
+			and TransactioCode interfaces. The implementations of this interfaces should 
+			not take care of catching and handling exception. This is responsibility 
+			of the TransactionManager that uses this components: it catches generic exceptions, 
+			handles them and throws custom exceptions -->
+		<sonar.issue.ignore.multicriteria.e14.ruleKey>
+			java:S112
+		</sonar.issue.ignore.multicriteria.e14.ruleKey>
+		<sonar.issue.ignore.multicriteria.e14.resourceKey>
+			**/logic/**/*Repository.java
+		</sonar.issue.ignore.multicriteria.e14.resourceKey>
+		<sonar.issue.ignore.multicriteria.e15.ruleKey>
+			java:S112
+		</sonar.issue.ignore.multicriteria.e15.ruleKey>
+		<sonar.issue.ignore.multicriteria.e15.resourceKey>
+			**/logic/**/TransactionCode.java
+		</sonar.issue.ignore.multicriteria.e15.resourceKey>
+
+		<!-- Disable rule "Hard-coded credentials are security-sensitive" for the 
+			Main class of the MySQL application. The hard-coded password is intended 
+			for testing and demo purposes. In a production environment the MySQL database 
+			should be secured with a strong password passed to the application through 
+			the command line -->
+		<sonar.issue.ignore.multicriteria.e16.ruleKey>
+			java:S2068
+		</sonar.issue.ignore.multicriteria.e16.ruleKey>
+		<sonar.issue.ignore.multicriteria.e16.resourceKey>
+			**/app-mysql/**/MySqlGymApp.java
+		</sonar.issue.ignore.multicriteria.e16.resourceKey>
 	</properties>
 
 	<build>
