--- a/.github/workflows/other-platforms.yml
+++ b/.github/workflows/other-platforms.yml
@@ -18,6 +18,8 @@ jobs:
             java: 8
           - os: macos-10.15
             java: 8
+          - os: windows-2019
+            java: 8
 
     name: Build with Java ${{ matrix.java }} on ${{ matrix.os }}
     steps:
