--- a/mysql/pom.xml
+++ b/mysql/pom.xml
@@ -101,12 +101,9 @@
 									<MYSQL_DATABASE>test</MYSQL_DATABASE>
 								</env>
 								<wait>
+									<!-- <log>.*mysqld: ready for connections.*port: 3306.*</log> -->
 									<time>30000</time>
 								</wait>
-								<log>
-									<enabled>true</enabled>
-									<color>CYAN</color>
-								</log>
 
 								<volumes>
 									<bind>
